<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     >

        <Button
            android:id="@+id/uppload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp"
            android:text="@string/add_plant_page_upload_button"
            android:textColor="@color/white"
            android:textSize="24dp"/>

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending3" />
    </LinearLayout>

    <EditText
        android:id="@+id/name_input"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_plant_page_name_input"
        android:paddingLeft="@dimen/default_margin" />

    <EditText
        android:id="@+id/description_input"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_plant_page_description_input"
        android:paddingLeft="@dimen/default_margin" />

    <Spinner
        android:id="@+id/grow_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:entries="@array/add_plant_page_grow_spinner_input"
        android:paddingLeft="@dimen/default_margin" />

    <Spinner
        android:id="@+id/water_spinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/item_margin"
        android:entries="@array/add_plant_page_water_spinner_input"
        android:paddingLeft="@dimen/default_margin" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:background="@color/darkGreen"
        android:text="@string/add_plant_page_confirm_button"
        android:textSize="24dp"
        android:textColor="@color/white"/>


</LinearLayout>